--- a/index.html
+++ b/index.html
@@ -54,5 +54,11 @@
     <label for="">Password:</label><input type="password" />
     <br />
     <button type="submit">Submit</button>
+
+    <label for="">Username:</label> <input type="text" />
+    <br />
+    <label for="">Password:</label><input type="password" />
+    <br />
+    <button type="submit">Submit</button>
   </body>
 </html>
